<resources>
    <string name="app_name">Brew Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Brew Day</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="addRecipeName">Recipe Name</string>
    <string name="addRecipeStyle">Style</string>
    <string name="addRecipeMalt">Malt</string>
    <string name="addRecipeHops">Hops</string>
    <string name="addRecipeYeast">Yeast</string>
    <string name="submitRecipeButton">Submit Recipe</string>
    <string name="viewRecipeStyle">Style</string>
    <string name="viewRecipeMalt">Malt</string>
    <string name="viewRecipeHops">Hops</string>
    <string name="viewRecipeYeast">Yeast</string>
    <string name="updateRecipeButton">Update Recipe</string>
    <string name="deleteRecipeButton">Delete Recipe</string>
    <string name="nav_recipes_title">Recipes</string>
    <string name="nav_processes_title">Brew Processes</string>
    <string name="rvRecipesTitle">Recent Recipes</string>
    <string name="viewRecipesTitle">Recipes</string>
    <string name="view_recipes_main_button">Brew Recipes</string>
    <string name="view_processes_main_button">Brew Processes</string>
    <string name="viewProcessesTitle">Brew Processes</string>
    <string name="view_process">View Process</string>
    <string name="addProcess">Add Process</string>
    <string name="addProcessName">Process Name</string>
    <string name="addProcessStyle">Process Type</string>
    <string name="submitProcessButton">Submit Process</string>
    <string name="updateProcessButton">Update Process</string>
    <string name="deleteProcessButton">Delete process</string>
    <string-array name="processTypeArray">
        <item>"All Grain"</item>
        <item>"Extract"</item>
        <item>"Brew In A Bag"</item>
    </string-array>
</resources>
