<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:hint="@string/addProcess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:descendantFocusability="beforeDescendants"
                android:id="@+id/addProcessTitle" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="314dp"
                android:layout_height="51dp"
                android:inputType="text"
                android:hint="@string/addProcessName"
                android:ems="10"
                android:id="@+id/view_process_name"
                android:layout_marginTop="8dp"
                android:nextFocusLeft="@+id/add_recipe_name"
                android:nextFocusUp="@+id/add_recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/addProcessTitle" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <EditText
                android:layout_width="314dp"
                android:layout_height="51dp"
                android:inputType="text"
                android:hint="@string/viewRecipeStyle"
                android:ems="10"
                android:id="@+id/view_process_type"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view_process_name" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.506"/>
        <EditText
                android:layout_width="314dp"
                android:layout_height="51dp"
                android:inputType="text"
                android:hint="@string/viewRecipeMalt"
                android:ems="10"
                android:id="@+id/view_recipe_malt"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view_process_type" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.493"/>
        <Button
                android:text="@string/updateProcessButton"
                android:layout_width="308dp"
                android:layout_height="49dp"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/update_process_button"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/view_process_type"/>

        <Button
                android:text="@string/deleteProcessButton"
                android:layout_width="308dp"
                android:layout_height="49dp"
                android:background="@color/danger"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/delete_process_button"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/update_process_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

