<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView
            android:text="@string/addRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/addRecipe" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text="@string/addRecipeName"
            android:ems="10"
            android:id="@+id/add_recipe_name" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addRecipe"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text="@string/addRecipeStyle"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.506"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/add_recipe_name"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text="@string/addRecipeMalt"
            android:ems="10"
            android:id="@+id/editText5" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.506"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText3"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text="@string/addRecipeMalt"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.493"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText5"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text="@string/addRecipeYeast"
            android:ems="10"
            android:id="@+id/editText7" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.493"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText6"/>
    <Button
            android:text="Submit Recipe"
            android:layout_width="311dp"
            android:layout_height="49dp"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="49dp" android:id="@+id/button"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText7"/>
</androidx.constraintlayout.widget.ConstraintLayout>