<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"

>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="vertical"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">

            <TextView
                    android:hint="@string/addProcess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/addProcessTitle" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:descendantFocusability="beforeDescendants"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <EditText
                    android:layout_width="314dp"
                    android:layout_height="51dp"
                    android:inputType="text"
                    android:hint="@string/addProcessName"
                    android:ems="10"
                    android:id="@+id/add_process_name"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:nextFocusLeft="@+id/add__name"
                    android:nextFocusUp="@+id/add_process_name"
                    app:layout_constraintTop_toBottomOf="@+id/addProcessTitle"/>

            <Spinner
                    android:layout_width="314dp"
                    android:layout_height="20dp"
                    android:id="@+id/add_process_type"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/add_process_name"
                    app:layout_constraintBottom_toTopOf="@+id/submit_process_button"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
            <Button
                    android:text="@string/submitProcessButton"
                    android:layout_width="308dp"
                    android:layout_height="49dp"
                    android:background="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:id="@+id/submit_process_button"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/add_process_type"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

